--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,44 @@
-<h1>Burgers!</h1>
+<img
+  src="https://lh3.googleusercontent.com/proxy/dEVzwqXLp8e0R41cYb1z0mkLZBYON3wF3XBndaeqKTNqdx6ITDETVzcEWWoAzZLphRQdH-fTzqPIEdxIh03-PK-0gA"
+  width="250" height="150" class="center">
 
-<h2>Burgers not Devoured!</h2>
 
-<ul>
-  {{#each burgers}}
-  {{#unless isDevoured}}
-  {{> burgers/burger-block isDevoured=true}}
-  {{/unless}}
-  {{/each}}
-</ul>
+<div class="main">
 
-<h2>Burgers Devoured!</h2>
 
-<ul>
-  {{#each burgers}}
-  {{#if isDevoured}}
-  {{> burgers/burger-block isDevoured=false}}
-  {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Burger:</label>
-    <input type="text" id="ca" name="name">
+  <div class="not-devoured">
+    <h2>Burgers not Devoured!</h2>
+    <ul>
+      {{#each burgers}}
+      {{#unless isDevoured}}
+      {{> burgers/burger-block isDevoured=true}}
+      {{/unless}}
+      {{/each}}
+    </ul>
   </div>
+  <div class="devoured">
+    <h2>Burgers Devoured!</h2>
 
-  <div class="form-group">
-    <label for="slee">Devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Not Devoured
+    <ul>
+      {{#each burgers}}
+      {{#if isDevoured}}
+      {{> burgers/burger-block isDevoured=false}}
+      {{/if}}
+      {{/each}}
+    </ul>
   </div>
+</div>
 
-  <button type="submit">Add Burger</button>
-</form>
+<div class="new-burger">
+  <h2>Add a Burger</h2>
+  <form class="create-form">
+
+    <div class="form-group">
+      <label for="ca">Burger:</label>
+      <input type="text" id="ca" name="name">
+    </div>
+
+
+    <button type="submit">Add Burger</button>
+  </form>
+</div>
