--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,6 +2,6 @@
 	{{name}}
 
 	<button class="change-devour" data-id="{{id}}" data-newdevour="{{isDevoured}}">
-		{{#if isDevoured}}DEVOURED!{{else}}Regurgitate!{{/if}}
+		{{#if isDevoured}}Devour!{{else}}Regurgitate!{{/if}}
 	</button>
 </li>
