--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <img
-  src="https://lh3.googleusercontent.com/proxy/dEVzwqXLp8e0R41cYb1z0mkLZBYON3wF3XBndaeqKTNqdx6ITDETVzcEWWoAzZLphRQdH-fTzqPIEdxIh03-PK-0gA"
-  width="250" height="150" class="center">
+  src="/assets//images/burger.png"
+  width="350" height="250" class="center">
 
 
 <div class="main">
